# xampp-control

./: Cargo.toml  README.md
assets/: xampp-control.desktop
src/: main.rs
